--- a/iaff_front/src/pages/Assistant/Assistant.css
+++ b/iaff_front/src/pages/Assistant/Assistant.css
@@ -1,11 +1,28 @@
-.chat-box {
-  width: 90%;
+.chat-container {
+  width: 100%;
   height: 80vh;
-  margin: 10px auto;
+  display: flex;
+}
+
+.history-box {
+  width: 30%;
+  padding: 1%;
+  overflow-y: scroll;
+}
+
+.chat-area-full {
+  width: 100%;
+}
+
+.chat-area-cut {
+  width: 70%;
+}
+
+.chat-box {
+  width: 100%;
+  height: 80%;
   padding: 1%;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   background-color: rgb(150, 204, 199);
   overflow-y: scroll;
 }
@@ -21,4 +38,16 @@
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #a8bbbf;
+}
+
+.input-box {
+  width: 100%;
+  height: 20%;
+  background-color: rgb(150, 204, 199);
+  padding: 1vh;
+}
+
+.input-bar {
+  height: 50px;
+  border-radius: 5px;
 }
