--- a/iaff_front/src/pages/Assistant/Assistant.css
+++ b/iaff_front/src/pages/Assistant/Assistant.css
@@ -1,53 +1,25 @@
-.chat-container {
-  width: 100%;
-  height: 80vh;
-  display: flex;
-}
-
-.history-box {
-  width: 30%;
-  padding: 1%;
-  overflow-y: scroll;
-}
-
-.chat-area-full {
-  width: 100%;
-}
-
-.chat-area-cut {
-  width: 70%;
-}
-
-.chat-box {
-  width: 100%;
-  height: 80%;
-  padding: 1%;
-  border: 1px solid #ccc;
-  background-color: rgb(150, 204, 199);
-  overflow-y: scroll;
-}
-
 ::-webkit-scrollbar {
   display: block;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #d6dee1;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: #a8bbbf;
 }
 
-.input-box {
-  width: 100%;
-  height: 20%;
-  background-color: rgb(150, 204, 199);
-  padding: 1vh;
+.spinner {
+  animation: spin 2s linear infinite;
 }
 
-.input-bar {
-  height: 50px;
-  border-radius: 5px;
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
